# food_agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
analytics_assistant/: agent.py  cli.py  executor.py  memory.py  prompts.py
analytics_assistant/tools/: __init__.py  analytics.py  base.py  dataset.py  deterministic.py
data/: daily_values.csv  foods3.csv
