[project]
name = "food_agent"
version = "0.1.0"
description = "An AI-powered food exploration agent"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "python-dotenv",
    "openai",
    "rich[typing]",
    "matplotlib",
    "RestrictedPython",
    "seaborn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"